added second instruction

--- a/index.html
+++ b/index.html
@@ -13,9 +13,14 @@
       word &quot;user&quot; above to the name the user has typed into the text
       input.
     </li>
+    <li>
+      Make three buttons labeled left, center, and right. When each button is 
+      clicked, change the horizontal alignment of the h1 element to match the 
+      button's label.
+    </li>
   </ol>
   <label for="name-input">Enter your name:<input type="text" id="name-input"/></label>
-  <button onclick="changeUserToName()">Submit name</button>
+  <button onclick="changeUserToName()">Submit name</button><br>
   <script src="script.js"></script>
 </body>
 </html>
